@@ -2,7 +2,7 @@
 Encoding=UTF-8
 _Name=Theme
 _Comment=Select themes for various parts of the desktop
-Exec=gnome-theme-properties
+Exec=gnome-theme-manager
 Icon=gnome-ccthemes.png
 Terminal=false
 Type=Application
