@@ -1,3 +1,15 @@
+Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c: Use new theme system.  Handle other
+	themes better.
+
+	* theme-thumbnail.c: new file to draw themes.  Currently
+	synchronous -- needs to be made async.
+
+Thu Nov  7 15:24:33 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gtk-theme-selector.desktop.in (Exec): change binary name.
+
 Tue Nov  5 15:48:20 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c (read_themes): make more robust.
